<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cm_smarthome.classroomcheckoutsystemforstudent.MenuCheckIn"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#673AB7">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/laySubjectID">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/tvSIDMenuC"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textSize="30dp"
                android:textColor="#fff9fff3" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_margin="10dp"
            android:id="@+id/layMenu"
            android:visibility="gone">

            <Button
                android:layout_width="198dp"
                android:layout_height="228dp"
                android:id="@+id/QRbtn"
                android:layout_below="@+id/tvSIDMenuC"
                android:layout_centerHorizontal="true"
                android:visibility="gone"
                android:background="@drawable/qr_code" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Please... Shake Device for Check in!"
                android:id="@+id/shakeTV"
                android:textColor="#fff9fff3"
                android:textSize="17dp"
                android:visibility="gone" />

            <ImageView
                android:layout_width="206dp"
                android:layout_height="213dp"
                android:id="@+id/shakeIM"
                android:background="@drawable/shake"
                android:layout_margin="10dp"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:id="@+id/layQiz"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/Q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/Q1"
                    android:textColor="#fff9fff3" />

                <RadioGroup
                    android:id="@+id/fgQ1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView7"
                    android:checkedButton="@+id/radioButton"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/ansQ1_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans1_1"
                        android:textColor="#fff9fff3" />

                    <RadioButton
                        android:id="@+id/ansQ1_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans1_2"
                        android:textColor="#fff9fff3" />

                    <RadioButton
                        android:id="@+id/ansQ1_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans1_3"
                        android:textColor="#fff9fff3" />

                    <RadioButton
                        android:id="@+id/ansQ1_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans1_4"
                        android:textColor="#fff9fff3" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/Q2"
                    android:textColor="#fff9fff3" />

                <RadioGroup
                    android:id="@+id/fgQ2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView8"
                    android:checkedButton="@+id/radioButton5"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/ansQ2_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans2_1"
                        android:textColor="#fff9fff3" />

                    <RadioButton
                        android:id="@+id/ansQ2_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans2_3"
                        android:textColor="#fff9fff3" />

                    <RadioButton
                        android:id="@+id/ansQ2_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans2_4"
                        android:textColor="#fff9fff3" />

                    <RadioButton
                        android:id="@+id/ansQ2_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans2_2"
                        android:textColor="#fff9fff3" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Q3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/Q3"
                    android:textColor="#fff9fff3" />

                <RadioGroup
                    android:id="@+id/fgQ3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView9"
                    android:checkedButton="@+id/radioButton9"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/ansQ3_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans3_1"
                        android:textColor="#fff9fff3" />

                    <RadioButton
                        android:id="@+id/ansQ3_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans3_2"
                        android:textColor="#fff9fff3" />

                    <RadioButton
                        android:id="@+id/ansQ3_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans3_4"
                        android:textColor="#fff9fff3" />

                    <RadioButton
                        android:id="@+id/ansQ3_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans3_3"
                        android:textColor="#fff9fff3" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Q4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/Q4"
                    android:textColor="#fff9fff3" />

                <RadioGroup
                    android:id="@+id/fgQ4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView9"
                    android:checkedButton="@+id/radioButton9"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/ansQ4_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans4_1"
                        android:textColor="#fff9fff3" />

                    <RadioButton
                        android:id="@+id/ansQ4_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans4_3"
                        android:textColor="#fff9fff3" />

                    <RadioButton
                        android:id="@+id/ansQ4_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans4_2"
                        android:textColor="#fff9fff3" />

                    <RadioButton
                        android:id="@+id/ansQ4_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans4_4"
                        android:textColor="#fff9fff3" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Q5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible" >

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/Q5"
                    android:textColor="#fff9fff3" />

                <RadioGroup
                    android:id="@+id/fgQ5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView9"
                    android:checkedButton="@+id/radioButton9"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/ansQ5_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans5_1"
                        android:textColor="#fff9fff3" />

                    <RadioButton
                        android:id="@+id/ansQ5_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans5_2"
                        android:textColor="#fff9fff3" />

                    <RadioButton
                        android:id="@+id/ansQ5_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans5_3"
                        android:textColor="#fff9fff3" />

                    <RadioButton
                        android:id="@+id/ansQ5_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ans5_4"
                        android:textColor="#fff9fff3" />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/btnQiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Q1"
                android:layout_marginTop="10dp"
                android:text="@string/Submit"
                android:visibility="visible" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
